overflow fix nav

--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -16,7 +16,9 @@
   & .container {
     display: flex;
     align-items: center;
+     @media screen and (max-width: 1199.5px) and (orientation: landscape) {
       overflow-y: scroll;
+     }
   }
 
   &__btn {
